classes added to client side